[project]
name = "ai-tutor"
version = "0.1.0"
description = "An AI tutor that explains complex technical concepts using structured narrative frameworks and YouTube transcripts"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "groq>=1.0.0",
    "python-dotenv>=1.2.1",
    "youtube-transcript-api>=1.2.3",
]
